# DEPI-Mega-project-1

./: .gitignore  README.md
resume_analyzer/: .env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  manage.py  pyproject.toml  requirements.txt  run.py
resume_analyzer/ai/: requirements.txt
resume_analyzer/ai/data/: skills.json
resume_analyzer/ai/extractors/job/: __init__.py  certification_extractor.py  education_extractor.py  experience_extractor.py  job_extractor.py  (+2 more)
resume_analyzer/ai/notebooks/: 2_resume_extraction.ipynb  4_modeling.ipynb  skills.json
resume_analyzer/ai/scripts/: 2_model_training.py  3_model_evaluation.py  4_infearance.py  5_ploting.py  generate_report.py  resume_parser.py  similarity_calculator.py
resume_analyzer/ai/source/: scoring.py  similarity_calculator.py
resume_analyzer/backend/: main.py  requirements.txt  settings.py
resume_analyzer/backend/controllers/: job_controller.py  match_controller.py  resume_controller.py
resume_analyzer/backend/database/: connection.py  create_database.py  create_tables.py
resume_analyzer/backend/models/: job_description_model.py  resume_match_model.py  resume_model.py
resume_analyzer/backend/schemas/: job_description_schema.py  match_result_schema.py  resume_schema.py
resume_analyzer/backend/services/: job_service.py  match_result_service.py  resume_service.py  upload_service.py
resume_analyzer/docs/extractors/: job_extractor.md  resume_extractor.md  text_extractor.md
resume_analyzer/docs/models/: job_description_model.md  match_result_model.md  resume_model.md
resume_analyzer/frontend/: package-lock.json  package.json
resume_analyzer/frontend/src/: App.jsx
(+262 files in other folders)
