[tool.poetry]
name = "resume-analyzer"
version = "0.1.0"
description = "AI-powered resume parsing and job matching platform using FastAPI + Sentence-BERT"
authors = ["Your Name <your@email.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "backend" }, { include = "ai" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.29" }
aiomysql = "^0.2.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
sentence-transformers = "^2.6.1"
scikit-learn = "^1.4.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
typer = { extras = ["all"], version = "^0.12.3" }
loguru = "^0.7.2"
pandas = "^2.2.2"
python-docx = "^1.1.0"
PyMuPDF = "^1.24.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pre-commit = "^3.7.0"

# -----------------------
# Tool Configurations
# -----------------------

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '\.venv|\.migrations|\.pytest_cache|\.git|build|dist'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
